--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootswatch": "^5.1.3",
     "chai": "^4.3.6",
+    "dotenv": "^16.0.0",
     "ethers": "^5.5.3",
     "hardhat": "^2.8.2",
     "react": "^17.0.2",
